# termd

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md  build.zig  build.zig.zon
examples/: kitty-sessioniser.sh
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  main.zig
src/config/: Config.zig
src/session/: mod.rs  types.rs
